--- a/Dokumentacija/Specifikacija_programske_potpore.tex
+++ b/Dokumentacija/Specifikacija_programske_potpore.tex
@@ -136,7 +136,6 @@
 			\subsection{Obrasci uporabe}
 								
 				\subsubsection{Opis obrazaca uporabe}
-					\textit{Funkcionalne zahtjeve razraditi u obliku obrazaca uporabe. Svaki obrazac je potrebno razraditi prema donjem predlošku. Ukoliko u nekom koraku može doći do odstupanja, potrebno je to odstupanje opisati i po mogućnosti ponuditi rješenje kojim bi se tijek obrasca vratio na osnovni tijek.}\\
 					
 
 					%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -1148,16 +1147,16 @@
 				\textbf{Obrazac uporabe UC1 - Registracija}\\
 
 				\noindent 
-				\textit{Neregistrirani korisnik šalje zahtjev za registracijom. Aplikacija dohvaća popis registriranih korisnika
+				Neregistrirani korisnik šalje zahtjev za registracijom. Aplikacija dohvaća popis registriranih korisnika
         				iz baze podataka.
         				Ako korisnik nije na popisu aplikacija mu šalje potvrdu na mail koju korisnik mora potvrditi.
         				U slučaju da se korisnik registrira da bi bio voditelj postaje ili istraživač aplikacija šalje administratoru
         				zahtjev za potvrdom te administrator mora potvrditi registraciju.
         				Zatim aplikacija zapisuje podatke u bazu podataka te dobiva potvrdu o uspjehu registracije od baze podataka
         				te aplikacija korisniku prikazuje poruku o uspješnoj registraciji.
-        				Ako korisnik postoji u bazi podataka aplikacija, korisnik se obavještava da korisnik već postoji u bazi podataka.}
+        				Ako korisnik postoji u bazi podataka aplikacija, korisnik se obavještava da korisnik već postoji u bazi podataka.
 
-				\eject
+				
 				
 				\begin{figure}[H]
 					\includegraphics[scale=0.5]{slike/UC1 - Registracija.png} %veličina slike u odnosu na originalnu datoteku i pozicija slike
@@ -1172,16 +1171,16 @@
 				\textbf{Obrazac uporabe UC19 - Dodavanje tragača na akciju}\\
 
 				\noindent
-				\textit{Voditelj postaje šalje aplikaciji upit za novim akcijama.
+				Voditelj postaje šalje aplikaciji upit za novim akcijama.
         			Aplikacija dohvaća popis aktivnih akcija iz baze podataka te ih prikazuje voditelju postaje.
         			Voditelj postaje zatim prolazi kroz sve aktivne akcije.
         			Aplikacija iz baze podataka dohvaća sve slobodne tragače koji zadovoljavaju zahtjeve istraživača.
         			U slučaju da ne postoje takvi tragači voditelju se postaje ispisuje poruka da nema dostupnih tragača.
         			U slučaju da popis nije prazan voditelju postaje prikazuje se popis tragača.
         			Voditelj postaje potom šalje odabrane tragače aplikaciji koja zatim dodaje akciju tragaču u bazi podataka te
-        			vraća voditelju postaje obavijest da je zahtjev poslan tragaču.}
+        			vraća voditelju postaje obavijest da je zahtjev poslan tragaču.
 
-				\eject
+				
 
 				\begin{figure}[H]
 					\includegraphics[scale=0.5]{slike/UC19 - Dodavanje tragača na akciju.png} %veličina slike u odnosu na originalnu datoteku i pozicija slike
@@ -1196,13 +1195,13 @@
 				\textbf{Obrazac uporabe UC24 - Završavanje akcije}\\
 
 				\noindent
-				\textit{Tragač šalje aplikaciji zahtjev za krajem akcije.
+				Tragač šalje aplikaciji zahtjev za krajem akcije.
         				Aplikacija dohvaća popis zadataka iz baze podataka i prikazuje popis tragaču.
         				Ako popis nije prazan tragaču se ispisuje poruka da nisu svi zadatci riješeni.
 				        Ako je popis prazan aplikacija šalje bazi podataka zahtjev za krajem akcije
-        				te potom obavještava tragača da je akcija završena.}
+        				te potom obavještava tragača da je akcija završena.
 
-				\eject
+				
 
 				\begin{figure}[H]
 					\includegraphics[scale=0.6]{slike/UC24 - Završavanje akcije.png} %veličina slike u odnosu na originalnu datoteku i pozicija slike
@@ -1217,13 +1216,13 @@
 				\textbf{Obrazac uporabe UC37 - Stvaranje nove akcije pretraživanja}\\
 
 				\noindent
-				\textit{Istraživač aplikaciji šalje zahtjev za novom akcijom.
+				Istraživač aplikaciji šalje zahtjev za novom akcijom.
 				        Aplikacija provjerava ima li istraživač već aktivne akcije.
         				U slučaju da istraživač već ima aktivnu akciju aplikacija obavještava istraživača da već postoji aktivna akcija.
         				Ako istraživač nema aktivnu akciju aplikacija bazi podataka šalje zahtjev za dodavanjem nove akcije te se
-        				istraživač obavještava da je akcija uspješno stvorena.}
+        				istraživač obavještava da je akcija uspješno stvorena.
 
-				\eject
+				
 
 				\begin{figure}[H]
 					\includegraphics[scale=0.5]{slike/UC37 - Stvaranje nove akcije pretraživanja.png} %veličina slike u odnosu na originalnu datoteku i pozicija slike
