--- a/Dokumentacija/Dodatak.tex
+++ b/Dokumentacija/Dodatak.tex
@@ -2,34 +2,58 @@
 		\addcontentsline{toc}{chapter}{Dodatak: Prikaz aktivnosti grupe}
 		
 		\section*{Dnevnik sastajanja}
-		
-		\textbf{\textit{Kontinuirano osvježavanje}}\\
-		
-		 \textit{U ovom dijelu potrebno je redovito osvježavati dnevnik sastajanja prema predlošku.}
-		
+						
 		\begin{packed_enum}
 			\item  sastanak
 			
 			\item[] \begin{packed_item}
-				\item Datum: u ovom formatu: \today
-				\item Prisustvovali: I.Prezime, I.Prezime
+				\item Datum: 20.listopada 2023.
+				\item Prisustvovali: F. Vuković, M. Pongrac, M. Kukolj, S. Troskot, J. Udovičić, D. Jurič
 				\item Teme sastanka:
 				\begin{packed_item}
-					\item  opis prve teme
-					\item  opis druge teme
+					\item  sastanak sa asistentom
+					\item analiza zadatka
+				\end{packed_item}
+			\end{packed_item}
+
+			\item  sastanak
+			
+			\item[] \begin{packed_item}
+				\item Datum: 25.listopada 2023.
+				\item Prisustvovali: F. Vuković, M. Pongrac, M. Kukolj, S. Troskot, J. Udovičić, D. Jurič
+				\item Teme sastanka:
+				\begin{packed_item}
+					\item  određivanje izgleda aplikacije
+					\item definiranje funkcionalnih zahtjeva
+					\item raspodjela poslova 
 				\end{packed_item}
 			\end{packed_item}
 			
 			\item  sastanak
 			\item[] \begin{packed_item}
-				\item Datum: u ovom formatu: \today
-				\item Prisustvovali: I.Prezime, I.Prezime
+				\item Datum: 4.studenoga 2023.
+				\item Prisustvovali: F. Vuković, M. Pongrac, M. Kukolj, S. Troskot, J. Udovičić, D. Jurič, G. Mihaljević
 				\item Teme sastanka:
 				\begin{packed_item}
-					\item  opis prve teme
-					\item  opis druge teme
+					\item  pregled i popravak dijagrama   
+					\item  dogovor u kojem jeziku i programima programiramo 
+					\item raspodjela poslova 
 				\end{packed_item}
 			\end{packed_item}
+
+			\item  sastanak
+			\item[] \begin{packed_item}
+				\item Datum: 10.studenoga 2023.
+				\item Prisustvovali: F. Vuković, M. Pongrac, M. Kukolj, S. Troskot, J. Udovičić, D. Jurič
+				\item Teme sastanka:
+				\begin{packed_item}
+					\item  sastanak sa demonstratorom - pregled dosadašnjeg rada
+					\item  osmišljavanje stranice i pojedinih pregleda
+					\item raspodjela poslova 
+				\end{packed_item}
+			\end{packed_item}
+
+
 			
 			%
 			
@@ -38,10 +62,6 @@
 		\eject
 		\section*{Tablica aktivnosti}
 		
-			\textbf{\textit{Kontinuirano osvježavanje}}\\
-			
-			 \textit{Napomena: Doprinose u aktivnostima treba navesti u satima po članovima grupe po aktivnosti.}
-
 			\begin{longtblr}[
 					label=none,
 				]{
@@ -53,18 +73,19 @@
 					rowhead = 1,
 				} 
 			
-				\SetCell[c=1]{c}{} & \SetCell[c=1]{c}{\rotatebox{90}{\textbf{Ime Prezime voditelja}}} & \SetCell[c=1]{c}{\rotatebox{90}{\textbf{Ime Prezime }}} &	\SetCell[c=1]{c}{\rotatebox{90}{\textbf{Ime Prezime }}} & \SetCell[c=1]{c}{\rotatebox{90}{\textbf{Ime Prezime }}} &	\SetCell[c=1]{c}{\rotatebox{90}{\textbf{Ime Prezime }}} & \SetCell[c=1]{c}{\rotatebox{90}{\textbf{Ime Prezime }}} &	\SetCell[c=1]{c}{\rotatebox{90}{\textbf{Ime Prezime }}} \\  
+				\SetCell[c=1]{c}{} & \SetCell[c=1]{c}{\rotatebox{90}{\textbf{Josipa Udovičić}}} & \SetCell[c=1]{c}{\rotatebox{90}{\textbf{Franjo Vuković}}} &	\SetCell[c=1]{c}{\rotatebox{90}{\textbf{Stela Troskot}}} & \SetCell[c=1]{c}{\rotatebox{90}{\textbf{Marko Pongrac}}} &	\SetCell[c=1]{c}{\rotatebox{90}{\textbf{Marko Kukolj}}} & \SetCell[c=1]{c}{\rotatebox{90}{\textbf{Domagoj Jurič}}} &	\SetCell[c=1]{c}{\rotatebox{90}{\textbf{Gregor Mihaljević}}} \\  
 				Upravljanje projektom 		&  &  &  &  &  &  & \\ 
-				Opis projektnog zadatka 	&  &  &  &  &  &  & \\ 
+				Opis projektnog zadatka 	& 4 &  &  &  &  &  & \\ 
 				
-				Funkcionalni zahtjevi       &  &  &  &  &  &  &  \\ 
-				Opis pojedinih obrazaca 	&  &  &  &  &  &  &  \\ 
-				Dijagram obrazaca 			&  &  &  &  &  &  &  \\ 
-				Sekvencijski dijagrami 		&  &  &  &  &  &  &  \\ 
-				Opis ostalih zahtjeva 		&  &  &  &  &  &  &  \\ 
+				Funkcionalni zahtjevi       & 1 &  &  &  &  &  &  \\ 
+				Opis pojedinih obrazaca 	&  &  & 2 &  &  & 2 &  \\ 
+				Dijagram obrazaca 			&  & 3 &  & 3 & 3 &  &  \\ 
+				Sekvencijski dijagrami		&  & 2 &  & 2 & 2 &  &  \\ 
+				Opis sekvencijskih dijagrama	&  &  &  & & 2 &  &  \\ 
+				Opis ostalih zahtjeva 		&  &  & 11 &  &  & 11 &  \\ 
 
-				Arhitektura i dizajn sustava	 &  &  &  &  &  &  &  \\ 
-				Baza podataka				&  &  &  &  &  &  &   \\ 
+				Arhitektura i dizajn sustava	 & 3 &  &  &  &  &  &  \\ 
+				Baza podataka(opis)				&  &  &  &  &  &  & 3  \\ 
 				Dijagram razreda 			&  &  &  &  &  &  &   \\ 
 				Dijagram stanja				&  &  &  &  &  &  &  \\ 
 				Dijagram aktivnosti 		&  &  &  &  &  &  &  \\ 
@@ -73,16 +94,15 @@
 				Ispitivanje programskog rješenja 	&  &  &  &  &  &  &  \\ 
 				Dijagram razmještaja			&  &  &  &  &  &  &  \\ 
 				Upute za puštanje u pogon 		&  &  &  &  &  &  &  \\  
-				Dnevnik sastajanja 			&  &  &  &  &  &  &  \\ 
+				Dnevnik sastajanja 			& 1 &  &  &  &  &  &  \\ 
 				Zaključak i budući rad 		&  &  &  &  &  &  &  \\  
 				Popis literature 			&  &  &  &  &  &  &  \\  
 				&  &  &  &  &  &  &  \\ \hline 
-				\textit{Dodatne stavke kako ste podijelili izradu aplikacije} 			&  &  &  &  &  &  &  \\ 
-				\textit{npr. izrada početne stranice} 				&  &  &  &  &  &  &  \\  
-				\textit{izrada baze podataka} 		 			&  &  &  &  &  &  & \\  
-				\textit{spajanje s bazom podataka} 							&  &  &  &  &  &  &  \\ 
-				\textit{back end} 							&  &  &  &  &  &  &  \\  
-				 							&  &  &  &  &  &  &\\ 
+				izrada početne stranice(registracija) 	& 7 &  &  &  &  &  &  \\  
+				izrada baze podataka	 	&  & 4 &  & 4 &  &  & \\  
+				spajanje s bazom podataka	&  & 2 &  & 2 & 2 &  &  \\ 
+				back end					&  & 9 &  & 9 & 9 &  &  \\  
+				front end					& 7 &  & 7 &  &  & 7 &\\ 
 			\end{longtblr}
 					
 					
