--- a/Dokumentacija/Dnevnik_promjena_dokumentacije.tex
+++ b/Dokumentacija/Dnevnik_promjena_dokumentacije.tex
@@ -24,8 +24,10 @@
 			0.7 & Napravljena baza podataka. & Franjo Vuković, Marko Pongrac & 09.11.2023.  \\[3pt] \hline 
 			0.7.1 & Napravljen dijagram baze podataka. & Franjo Vuković, Marko Pongrac & 09.11.2023.  \\[3pt] \hline 
 			0.7.2 & Napisan opis baze podataka. & Gregor Mihaljević & 13.11.2023. \\[3pt] \hline 
-			0.8 & Napisan kod za registraciju korisnika. & Josipa Udovičić & 13.11.2023. \\[3pt] \hline 
+			0.8 & Dodan dio dijagrama razreda. & Franjo Vuković, Marko Pongrac, Marko Kukolj & 15.11.2023. \\[3pt] \hline 
+			0.8.1 & Dodani svi dijagrami razreda. & Franjo Vuković, Marko Pongrac, Marko Kukolj & 16.11.2023. \\[3pt] \hline 
+			0.9 & Opisi razreda i dodatak & Josipa Udovičić & 16.11.2023. \\[3pt] \hline
+			1.0 & Korigiranje teksta i provjera dokumentacije & Josipa Udovičić & 17.11.2023. \\[3pt] \hline
 
-			
 		\end{longtblr}
 	
