--- a/Dokumentacija/Literatura.tex
+++ b/Dokumentacija/Literatura.tex
@@ -1,10 +1,5 @@
 \chapter*{Popis literature}
-		\addcontentsline{toc}{chapter}{Popis literature}
-	 	
- 		\textbf{\textit{Kontinuirano osvježavanje}}
-	
-		\textit{Popisati sve reference i literaturu koja je pomogla pri ostvarivanju projekta.}
-		
+		\addcontentsline{toc}{chapter}{Popis literature}		
 		
 		\begin{enumerate}
 			
@@ -20,6 +15,10 @@
 			\item  The Unified Modeling Language, \url{https://www.uml-diagrams.org/}
 			
 			\item  Astah Community, \url{http://astah.net/editions/uml-new}
+			
+			\item  \url{https://play.google.com/store/apps/details?id=com.mpio.movebank&hl=en&gl=US}
+			
+			\item  \url{https://play.google.com/store/apps/details?id=com.tips.dikihzhivotnyh&hl=hr}
 		\end{enumerate}
 		
 		 
