--- a/Dokumentacija/Dodatak.tex
+++ b/Dokumentacija/Dodatak.tex
@@ -103,7 +103,7 @@
 				Korištene tehnologije i alati 		&  &  &  &  &  &  &  \\ 
 				Ispitivanje programskog rješenja 	& 2 & 3 &  & 3 & 3 &  &  \\ 
 				Dijagram razmještaja			&  &  &  &  &  &  &  \\ 
-				Upute za puštanje u pogon 		&  &  &  &  & 3 &  &  \\  
+				Upute za puštanje u pogon 		& 1 & 6 &  &  & 3 &  &  \\  
 				Dnevnik sastajanja 			& 1 &  &  &  &  &  &  \\ 
 				Zaključak i budući rad 		&  &  &  &  &  &  &  \\  
 				Popis literature 			& 1 &  &  &  &  &  &  \\  
