--- a/Dokumentacija/Arhitektura.tex
+++ b/Dokumentacija/Arhitektura.tex
@@ -5,7 +5,7 @@ Arhitektura sustava može se podijeliti na tri ključna podsustava:
 \begin{packed_enum}
 	\item Web poslužitelj:
 	\begin{packed_enum}
-		\item Srce web aplikacije.
+		\item Ključan dio web aplikacije.
 		\item Odgovoran za interakciju između klijenta i aplikacije.
 		\item Koristi HTTP/HTTPS protokol za prijenos informacija na webu.
 		\item Inicira pokretanje web aplikacije i proslijeđuje zahtjeve.
@@ -33,23 +33,16 @@ Ova interakcija omogućuje korisnicima pregled i manipulaciju sadržajem putem w
 	\label{fig:arhitektura}
 \end{figure}
 
-React je biblioteka koju smo odabrali za izradu naše web aplikacije, zajedno sa Spring Boot radnim okvirom te programskim jezikom JavaScript. 
-Odabrano razvojno okruženje je Visual Studio Code. Arhitektura sustava temeljiti će se na MVC(Model-View-Controller) konceptu.
-\newline React je biblioteka otvorenog koda koja se koristi za izgradnju korisničkih sučelja.
-\begin{packed_item}
-	\item Jezik: Povezan je s JavaScriptom
-	\item Slučajevi upotrebe: Često se koristi za izradu jednostranih aplikacija, gdje je potrebna brza i prilagodljiva interakcija
-	\item Platforma: Nema specifičnu platformu; može se koristiti u web aplikacijama na različitim platformama
-\end{packed_item}
-Spring Boot je radno okruženje koje se koristi za izgradnju aplikacija.
-\begin{packed_item}
-	\item Jezik: prvenstveno povezan s Javom
-	\item Radno okruženje: Spring Boot dio je Spring Frameworka za Java razvoj
-	\item Slučajevi upotrebe: naširoko se koristi za izradu web aplikacija temeljenih na Javi
-	\item Ekosustav: Java ekosustav, s jakom integracijom s tehnologijama kao što su Spring MVC, Spring Data itd.
-	\item Platforma: Java Virtual Machine (JVM)
-\end{packed_item}
-Spring Boot podržava koncept MVC (Model-View-Controller) arhitekture, a to se postiže kroz Spring Web MVC modul. Spring Boot podržava MVC koncept:
+Za izradu ovog projekta koristili smo se Spring Boot frameworkom u Javi kroz
+razvojno okruženje IntelliJ Community Edition, Javascriptom uz React u Visual
+Studio Code-u te drugim programima za dizajn slika i grafova ( AstahUML itd.).
+
+
+ Spring Boot podržava koncept MVC, odnosno Model-Pogled-Nadglednik
+(engl. \textit{Model View Controller}), arhitekture, tj. stilističke varijacije arhitekture zasnovane 
+na događajima. Takve arhitekture odlikuje to što se komponente međusobno ne pozivaju
+eksplicitno, već neke od njih generiraju signale (događaje) ne znajući koja druga
+"osluškuje" tj. očekuje takav signal i na njega reagira. To se postiže kroz Spring Web MVC modul. 
 \begin{packed_item}
 	\item Model: Spring Boot omogućava korištenje Java objekata kao modela. Ovi objekti predstavljaju podatke koji se koriste u aplikaciji.
 	Spring Data može se integrirati za jednostavno upravljanje podacima i komunikaciju s bazom podataka.
@@ -59,14 +52,21 @@ Spring Boot podržava koncept MVC (Model-View-Controller) arhitekture, a to se p
 	@RequestMapping i slične anotacije omogućuju mapiranje HTTP zahtjeva na određene metode kontrolera.
 	Spring Boot automatski prepoznaje i konfigurira komponente kontrolera.		
 \end{packed_item}
-Primjena MVC koncepta u Spring Boot-u olakšava održavanje i proširivost aplikacija.
-	
+
+Kod MVC-a pogodno je što smanjuje međuovisnost korisničkog sučelja i ostatka sustava, a omogućuje i nezavisan razvoj, nadogradnje i dodavanje različitih dijelova aplikacije. Sadrži različite
+gotove predloške za klase koji nam olakšavaju proces izrade.
 				
 		\section{Baza podataka}
 			    
 
 
-		Baze podataka neizostavan su dio razvoja programske potpore jer danas gotova svaka domena primjene obiluje mnoštvom podataka koje treba pohraniti na organiziran način kako bi se efikasno dohvaćali, mijenjali i nadopunjavali. Za upravljanje bazom podataka mogu se koristiti različiti sustavi koji obavljaju optimiranje upita i omogućuju rukovanje podatcima. Mi smo odlučili koristiti PostgreSQL koji nam je bio preporučen na kolegiju Baze podataka. \newline Iako stvarni svijet ne možemo prikazati sa svim detaljima, relacijski nam model baze podataka omogućuje vjeran prikaz stvarnosti pomoću relacija u koje pohranjujemo vrijednosti odabranih atributa vezanih uz entitete bitne za domenu primjene. Formalno gledano relacija, tj. instanca relacije, definirana na relacijskoj shemi je skup n-torki, a neformalno možemo reći da je to imenovana dvodimenzionalna tablica. Atributi su imenovani stupci te tablice. ER (Entity-Relationship) model podataka zadržava dobra svojstva relacijskog modela, a uz to omogućuje eksplicitni prikaz semantičkih informacija vezanih uz veze (odnose) između entiteta. Kako bismo prikazali kako su eniteti našeg sustava povezani koristit ćemo ER model baze podataka.
+		Baze podataka neizostavan su dio razvoja programske potpore jer danas gotova svaka domena primjene 
+		obiluje mnoštvom podataka koje treba pohraniti na organiziran način kako bi se efikasno dohvaćali,
+		 mijenjali i nadopunjavali. Za upravljanje bazom podataka mogu se koristiti različiti sustavi koji 
+		 obavljaju optimiranje upita i omogućuju rukovanje podatcima. Mi smo odlučili koristiti PostgreSQL 
+		 koji nam je bio preporučen na kolegiju Baze podataka. \newline Relacijski nam model baze podataka 
+		 omogućuje vjeran prikaz stvarnosti pomoću relacija u koje pohranjujemo vrijednosti odabranih 
+		 atributa vezanih uz entitete bitne za domenu primjene. Atributi su imenovani stupci te tablice. ER (Entity-Relationship) model podataka zadržava dobra svojstva relacijskog modela, a uz to omogućuje eksplicitni prikaz semantičkih informacija vezanih uz veze (odnose) između entiteta. Kako bismo prikazali kako su eniteti našeg sustava povezani koristit ćemo ER model baze podataka.
 za podataka ove aplikacije sastoji se od sljedećih entiteta:
 		\begin{packed_item}
 			\item Korisnik
@@ -86,7 +86,11 @@ za podataka ove aplikacije sastoji se od sljedećih entiteta:
 		\eject
 			\subsection{Opis tablica}
 			
-				
+					\textbf {Zadatak} Ovaj entitet sadrži sve važne informacije o zadatcima koje obavljaju tragači tijekom akcije, a stvaraju istraživači. Sadrži
+				atribute: šifra zadatka, korisničko ime, tekst, završen, šifra akcije, šifra životinje i šifra vozila. 
+				Ova tablica je u vezi s tablicom Prijevozno sredstvo preko tablice Osposobljen za te izravno preko 
+				dentifikatora vozila(šifra vozila), s tablicom Akcija izravno preko identifikatora akcije (šifra akcije), 
+				s tablicom Životinja izravno preko identifikatora životinje (šifra životinje).
 				
 				\begin{longtblr}[
 					label=none,
@@ -99,12 +103,17 @@ za podataka ove aplikacije sastoji se od sljedećih entiteta:
 					\hline \SetCell[c=3]{c}{\textbf{Zadatak}}	 \\ \hline[3pt]
 					\SetCell{LightGreen} Šifra Zadatka & INT	&  	Jedinstveni brojčani identifikator zadatka  	\\ \hline
 					\SetCell{LightGreen} Korisničko ime & VARCHAR	& 	Korisničko ime korisnika\\ \hline
-					Tekst	& VARCHAR & Opis Zadatka  	\\ \hline 
+					Tekst	& VARCHAR & Opis zadatka  	\\ \hline 
 					Završen & BOOLEAN & Status je li zadatak završen  \\ \hline 
           \SetCell{LightBlue} Šifra akcije 	& INT & Jedinstveni brojčani identifikator akcije   	\\ \hline 
           \SetCell{LightBlue} Šifra životinje 	& INT &   Jedinstveni brojčani identifikator životinje  	\\ \hline 
           \SetCell{LightBlue} Šifra vozila 	& INT &  Jedinstveni brojčani identifikator vozila 	\\ \hline 
 				\end{longtblr}
+
+				\textbf {Akcija} Ovaj entitet sadrži sve važne informacije o akcijama pretraživanja i praćenja. Sadrži
+			atribute: šifra akcije, naziv akcije, aktivna i korisničko ime. 
+			Ova tablica je u vezi s tablicom Korisnik preko identifikatora korisnika(korisničko ime),
+			 s tablicom Životinja preko tablice Komentar korisnika, s tablicom Zadatak i tablicom Pozicija tragača.
 				
 				\begin{longtblr}[
 					label=none,
@@ -121,6 +130,9 @@ za podataka ove aplikacije sastoji se od sljedećih entiteta:
           \SetCell{LightBlue} Korisničko ime 	& VARCHAR &  Korisničko ime korisnika 	\\ \hline 
 				\end{longtblr}
 			
+				\textbf {Komentar korisnika} Ovaj entitet sadrži informacije o komentarima korisnika o praćenoj životinji 
+				koje mogu ostaviti tijekom akcije. Sadrži atribute: šifra životinje, korisničko ime, šifra akcije i komentar. 
+		
 
 				\begin{longtblr}[
 					label=none,
@@ -136,7 +148,10 @@ za podataka ove aplikacije sastoji se od sljedećih entiteta:
 					\SetCell{LightGreen} Šifra akcije & INT	&  	Jedinstveni brojčani identifikator akcije  	\\ \hline
 					Komentar	& VARCHAR & Sadržaj komentara  	\\ \hline 
 				\end{longtblr}
-			
+				
+				\textbf {Životinja} Ovaj entitet sadrži sve važne informacije o životinjama. Sadrži
+			atribute: šifra životinje, naziv , latinski naziv i opis. 
+			Ova tablica povezana je s tablicom Pozicija životinje s tablicom Zadatak preko identifikatora životinje(šifra životinje) te s tablicom Akcija
 
 				\begin{longtblr}[
 					label=none,
@@ -152,6 +167,10 @@ za podataka ove aplikacije sastoji se od sljedećih entiteta:
 					Latinski naziv	& VARCHAR & Latinski naziv životinje  	\\ \hline 
 					Opis	& VARCHAR & Sadržaj komentara  	\\ \hline 
 				\end{longtblr}
+
+				\textbf {Pozicija životinje} Ovaj entitet sadrži informacije o poziciji životinje. 
+				Pomoću njega bilježimo gibanje životinje na kartama. Sadrži
+			atribute: šifra životinje, vremenska oznaka, geografska širina i geografska dužina.
 
 
 				\begin{longtblr}[
@@ -169,6 +188,9 @@ za podataka ove aplikacije sastoji se od sljedećih entiteta:
           Geografska dužina	& DOUBLE & Iznos geografske dužine  	\\ \hline 
 				\end{longtblr}
 
+				\textbf {Pozicija tragača} Ovaj entitet sadrži informacije o poziciji tragača. 
+				Pomoću njega bilježimo kretanje tragača na kartama. Sadrži
+			atribute: korisničko ime, vremenska oznaka, šifra akcije, geografska širina i geografska dužina.
 
 				\begin{longtblr}[
 					label=none,
@@ -186,6 +208,9 @@ za podataka ove aplikacije sastoji se od sljedećih entiteta:
           Geografska dužina	& DOUBLE & Iznos geografske dužine  	\\ \hline 
 				\end{longtblr}
 
+				\textbf {Korisnik} Ovaj entitet sadrži sve važne informacije o korisnicima. Sadrži
+			atribute: korisničko ime, email, lozinka, ime, prezime, fotografija i šifra uloge.
+			Ova tablica je u vezi s tablicama Akcija, Pozicija tragača, Uloga i Komentar korisnika.
 
 				\begin{longtblr}[
 					label=none,
@@ -206,6 +231,8 @@ za podataka ove aplikacije sastoji se od sljedećih entiteta:
 
 				\end{longtblr}
 
+				\textbf {Pripada postaji} Ova veza sadrži informacije po kojima saznajemo koji korisnik pripada kojoj postaji.
+				Povezuje entitete Korisnik i Postaja te sadrži njihove ključne atribute: korisničko ime i šifra postaje.
 
 				\begin{longtblr}[
 					label=none,
@@ -221,6 +248,8 @@ za podataka ove aplikacije sastoji se od sljedećih entiteta:
 
 				\end{longtblr}
 
+				\textbf {Postaja} Ovaj entitet sadrži informacije o postajama. Sastoji se od
+			atributa: šifra postaje i naziv postaje.
 
 				\begin{longtblr}[
 					label=none,
@@ -236,6 +265,8 @@ za podataka ove aplikacije sastoji se od sljedećih entiteta:
 
 				\end{longtblr}
 
+				\textbf {Osposobljen za} Ova veza sadrži informacije po kojima saznajemo koji korisnik ima sposobnosti za voziti koje prijevozno sredstvo.
+				Povezuje entitete Korisnik i Prijevozno sredstvo te sadrži njihove ključne atribute: korisničko ime i šifra vozila.
 
 				\begin{longtblr}[
 					label=none,
@@ -251,6 +282,9 @@ za podataka ove aplikacije sastoji se od sljedećih entiteta:
 
 				\end{longtblr}
 
+				\textbf {Prijevozno sredstvo} Ovaj entitet sadrži informacije o vozilima za koje tragači mogu biti osposobljeni.
+				 Sastoji se od atributa: šifra vozila i naziv vozila.
+
 
 				\begin{longtblr}[
 					label=none,
@@ -265,6 +299,9 @@ za podataka ove aplikacije sastoji se od sljedećih entiteta:
           Naziv vozila & VARCHAR & Puni naziv vozila \\ \hline
 
 				\end{longtblr}
+
+				\textbf {Uloga} Ovaj entitet sadrži informacije o ulogama korisnika. Sastoji se od
+			atributa: šifra uloge i naziv uloge.
 
 
 				\begin{longtblr}[
